Internal function caching for maximum performance

--- a/L2C/L2C.csproj
+++ b/L2C/L2C.csproj
@@ -47,6 +47,7 @@
     <Compile Include="LuaSystem\Analyzer\LuaAnalyzerInstruction.cs" />
     <Compile Include="LuaSystem\Instructions\LuaInstructionIfStatement.cs" />
     <Compile Include="LuaSystem\Analyzer\LuaAnalyzer.cs" />
+    <Compile Include="LuaSystem\Instructions\LuaInstructionInternal.cs" />
     <Compile Include="LuaSystem\LuaCore.cs" />
     <Compile Include="LuaSystem\LuaFunction.cs" />
     <Compile Include="LuaSystem\Instructions\LuaInstruction.cs" />
