--- a/L2C/L2C.csproj
+++ b/L2C/L2C.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="LuaSystem\Analyzer\LuaAnalyzerFunction.cs" />
     <Compile Include="LuaSystem\Analyzer\LuaAnalyzerInstruction.cs" />
+    <Compile Include="FastMethodInfo.cs" />
     <Compile Include="LuaSystem\Instructions\LuaInstructionIfStatement.cs" />
     <Compile Include="LuaSystem\Analyzer\LuaAnalyzer.cs" />
     <Compile Include="LuaSystem\Instructions\LuaInstructionInternal.cs" />
